syntax = "proto3";

package user_service;

option go_package = "csc2012-t12/proto";

// import "google/api/annotations.proto";

service User{
    rpc LoginUser(LoginRequest) returns (LoginResponse) {
        option (google.api.http) = {
            post: "/login"
            body: "*"
        };
    }
    rpc GetInfo(InfoRequest) returns (InfoResponse) {
        option (google.api.http) = {
            get: "/info/{id}"
        };
    }
    rpc GetReward(RewardRequest) returns (RewardResponse) {
        option (google.api.http) = {
            post: "/reward"
            body: "*"
        };
    }
}

message LoginRequest{
    string username = 1;
    string password = 2;
}

message LoginResponse{
    string id = 1;
}

message InfoRequest{
    string id = 1;
}

message InfoResponse{
    string username = 1;
    string name = 2;
    int32 points = 3;
}

message RewardRequest{
    string id = 1;
    int32 points = 2;
}

message RewardResponse{
    bool success = 1;
}